<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Splash</string>
    <string name="Onboard1Quick">Quick Delivery At Your \n Doorstep</string>
    <string name="Onboard1Enjoy">Enjoy quick pick-up and delivery to \n your destination</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="Onboard2Flexible">Flexible Payment</string>
    <string name="OnBoard2Different">Different modes of payment either \n before and after delivery without \n stress</string>
    <string name="Onboard3Real">Real-time Tracking</string>
    <string name="Onboard3Track">Track your packages/items from the \n comfort of your home till final destination</string>
    <string name="Signup">Sign Up</string>
    <string name="Haveacc">Already have an account?</string>
    <string name="Signin">Sign in</string>
    <string name="Create">Create an account</string>
    <string name="Complete">Complete the sign up process to get started</string>
    <string name="Full">Full name</string>
    <string name="Hint">Ivanov Ivan</string>
    <string name="Phone">Phone Number</string>
    <string name="Hint_num">+7(999)999-99-99</string>
    <string name="Email">Email Address</string>
    <string name="Hint_email">***********@mail.com</string>
    <string name="Password">Password</string>
    <string name="Hint_password">**********</string>
    <string name="Conf_pas">Confirm Password</string>
    <string name="policy">By ticking this box, you agree to our</string>
    <string name="Remember_pas">Remember password? Back to </string>
    <string name="Send">Send OTP</string>
    <string name="Forgot">Forgot Password</string>
    <string name="Enter_email">Enter your email address</string>
    <string name="OTP">OTP Verification</string>
    <string name="Enter_6_digit">Enter the 6 digit numbers sent to your email</string>
    <string name="Resend">If you didn’t receive code, resend after 1:00</string>
    <string name="New_pas">Set New Password</string>
    <string name="New_password">New Password</string>
    <string name="Enter_new_pas">Enter new password</string>
    <string name="Login">Log in</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>