<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_up">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Create"
                    android:textSize="24dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/Complete"
                    android:textColor="@color/Gray"
                    android:textSize="14dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Full"
                        android:textColor="@color/Gray" />

                    <EditText
                        android:id="@+id/editTextText"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/kr_ug"
                        android:ems="10"
                        android:hint="@string/Hint"
                        android:inputType="textPersonName"
                        android:paddingLeft="10dp"
                        android:textColorHint="@color/Gray"
                        android:textSize="14dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Phone"
                        android:textColor="@color/Gray" />

                    <EditText
                        android:id="@+id/editTextPhone"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/kr_ug"
                        android:ems="10"
                        android:hint="@string/Hint_num"
                        android:inputType="phone"
                        android:paddingLeft="10dp"
                        android:textSize="14dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Email"
                        android:textColor="@color/Gray" />

                    <EditText
                        android:id="@+id/editTextTextEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/kr_ug"
                        android:ems="10"
                        android:hint="@string/Hint_email"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="10dp"
                        android:textSize="14dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#922B2B"
                        android:text="@string/Password"
                        android:textColor="@color/Gray" />

                    <EditText
                        android:id="@+id/editTextTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/kr_ug"
                        android:ems="10"
                        android:hint="@string/Hint_password"
                        android:inputType="textPassword"
                        android:paddingLeft="10dp"
                        android:textSize="14dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Conf_pas"
                        android:textColor="@color/Gray" />

                    <EditText
                        android:id="@+id/editTextTextPassword2"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/kr_ug"
                        android:ems="10"
                        android:hint="@string/Hint_password"
                        android:inputType="textPassword"
                        android:paddingLeft="10dp"
                        android:textSize="14dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="296dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:buttonTint="#006CEC"
                        android:checked="false" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView12"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/policy"
                                android:textColor="@color/Gray"
                                android:textSize="12dp" />

                            <TextView
                                android:id="@+id/textView14"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text=" Terms and"
                                android:textColor="#EBBC2E"

                                android:textSize="12dp" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="conditions and private policy"
                            android:textColor="#EBBC2E"
                            android:textSize="12dp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="342dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="342dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="60dp"
                    android:backgroundTint="@color/Gray"
                    android:bottomLeftRadius="5dp"
                    android:bottomRightRadius="100dp"
                    android:clickable="false"
                    android:onClick="onClick"
                    android:text="@string/Login"
                    app:cornerRadius="5dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Haveacc"
                        android:textColor="@color/Gray" />

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="Sign_in"
                        android:text="@string/Signin"
                        android:textColor="@color/primary"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="or sign in using"
                    android:textColor="@color/Gray"
                    android:textSize="14dp" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/facebook" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>