<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OTP_verification">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="342dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="170dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/OTP"
                    android:textSize="24dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/Enter_6_digit"
                    android:textColor="@color/Gray"
                    android:textSize="14dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="342dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextNumberPassword"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginRight="30dp"
                        android:layout_weight="1"
                        android:background="@drawable/square"
                        android:ems="10"
                        android:inputType="numberPassword" />

                    <EditText
                        android:id="@+id/editTextNumberPassword2"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginRight="30dp"
                        android:layout_weight="1"
                        android:background="@drawable/square"
                        android:ems="10"
                        android:inputType="numberPassword" />

                    <EditText
                        android:id="@+id/editTextNumberPassword3"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginRight="30dp"
                        android:layout_weight="1"
                        android:background="@drawable/square"
                        android:ems="10"
                        android:inputType="numberPassword" />

                    <EditText
                        android:id="@+id/editTextNumberPassword4"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginRight="30dp"
                        android:layout_weight="1"
                        android:background="@drawable/square"
                        android:ems="10"
                        android:inputType="numberPassword" />

                    <EditText
                        android:id="@+id/editTextNumberPassword5"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginRight="30dp"
                        android:layout_weight="1"
                        android:background="@drawable/square"
                        android:ems="10"
                        android:inputType="numberPassword" />

                    <EditText
                        android:id="@+id/editTextNumberPassword6"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_weight="1"
                        android:background="@drawable/square"
                        android:ems="10"
                        android:inputType="numberPassword" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView25"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Resend"
                        android:textColor="@color/Gray" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="342dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/Gray"
                    android:bottomLeftRadius="5dp"
                    android:bottomRightRadius="100dp"
                    android:onClick="SetNewPassword1"
                    android:text="@string/New_pas"
                    app:cornerRadius="5dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>